--- a/fastnet/pages/projects.html
+++ b/fastnet/pages/projects.html
@@ -76,57 +76,41 @@
 
     <!-- === Projects === -->
     <section id="projects">
-        <div class="container">
-            <div class="grid-3">
-                <div class="card">
-                    <div class="card-body">
-                        <h2>CCTV Installation</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem inventore? Voluptate pariatur doloremque dicta voluptatum sapiente illo reprehenderit molestias rem deleniti
-                            quo.
-                        </p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-body">
-                        <h2>CCTV Installation</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem inventore? Voluptate pariatur doloremque dicta voluptatum sapiente illo reprehenderit molestias rem deleniti
-                            quo.
-                        </p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-body">
-                        <h2>CCTV Installation</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem inventore? Voluptate pariatur doloremque dicta voluptatum sapiente illo reprehenderit molestias rem deleniti
-                            quo.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="grid-2">
-                <div class="card">
-                    <div class="card-body">
-                        <h2>CCTV Installation</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem inventore? Voluptate pariatur doloremque dicta voluptatum sapiente illo reprehenderit molestias rem deleniti
-                            quo.
-                        </p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-body">
-                        <h2>CCTV Installation</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem inventore? Voluptate pariatur doloremque dicta voluptatum sapiente illo reprehenderit molestias rem deleniti
-                            quo.
-                        </p>
-                    </div>
-                </div>
-            </div>
+        <div class="project-text">
+            <h2>CCTV Installation</h2>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, sit ipsum libero nihil, beatae atque eligendi exercitationem vitae corporis quam eum rem facilis quisquam dicta nostrum repellat est, perspiciatis unde? Lorem, ipsum dolor sit amet consectetur
+                adipisicing elit. Nesciunt, sit ipsum libero nihil, beatae atque eligendi exercitationem vitae corporis quam eum rem facilis quisquam dicta nostrum repellat est, perspiciatis unde?
+            </p>
         </div>
+        <div class="project-img">
+            <img src="../assets/img/camera/camera-installation.jpg" alt="">
+        </div>
+    </section>
+
+    <section id="projects">
+        <div class="project-img">
+            <img src="../assets/img/it-infrastructure/installation1.jpg" alt="">
+        </div>
+        <div class="project-text">
+            <h2>It infrastructure</h2>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, sit ipsum libero nihil, beatae atque eligendi exercitationem vitae corporis quam eum rem facilis quisquam dicta nostrum repellat est, perspiciatis unde? Lorem, ipsum dolor sit amet consectetur
+                adipisicing elit. Nesciunt, sit ipsum libero nihil, beatae atque eligendi exercitationem vitae corporis quam eum rem facilis quisquam dicta nostrum repellat est, perspiciatis unde?
+            </p>
+        </div>
+    </section>
+
+    <section id="projects">
+        <div class="project-text">
+            <h2>Structured cabling</h2>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, sit ipsum libero nihil, beatae atque eligendi exercitationem vitae corporis quam eum rem facilis quisquam dicta nostrum repellat est, perspiciatis unde? Lorem, ipsum dolor sit amet consectetur
+                adipisicing elit. Nesciunt, sit ipsum libero nihil, beatae atque eligendi exercitationem vitae corporis quam eum rem facilis quisquam dicta nostrum repellat est, perspiciatis unde?
+            </p>
+        </div>
+        <div class="project-img">
+            <img src="../assets/img/structured-cabling/structured-cabling4.jpg" alt="">
         </div>
     </section>
 
