--- a/fastnet/pages/services.html
+++ b/fastnet/pages/services.html
@@ -81,11 +81,11 @@
                 <div class="card">
                     <div class="card-img">
                         <div class="inner">
-                            <img src="../assets/img/it-infrastructure/it-infrastructure3.jpg" alt="" class="card-img-top fluid">
+                            <img src="../assets/img/camera/camera16.jpg" alt="" class="card-img-top fluid">
                         </div>
                     </div>
                     <div class="card-body">
-                        <h2>it infrastructure</h2>
+                        <h2>Cctv system</h2>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
                         </p>
@@ -95,11 +95,11 @@
                 <div class="card">
                     <div class="card-img">
                         <div class="inner">
-                            <img src="../assets/img/it-infrastructure/it-infrastructure3.jpg" alt="" class="card-img-top fluid">
+                            <img src="../assets/img/camera/camera14.jpg" alt="" class="card-img-top fluid">
                         </div>
                     </div>
                     <div class="card-body">
-                        <h2>it infrastructure</h2>
+                        <h2>Cctv system</h2>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
                         </p>
@@ -109,11 +109,11 @@
                 <div class="card">
                     <div class="card-img">
                         <div class="inner">
-                            <img src="../assets/img/it-infrastructure/it-infrastructure3.jpg" alt="" class="card-img-top fluid">
+                            <img src="../assets/img/camera/camera13.jpg" alt="" class="card-img-top fluid">
                         </div>
                     </div>
                     <div class="card-body">
-                        <h2>it infrastructure</h2>
+                        <h2>Cctv system</h2>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
                         </p>
@@ -121,14 +121,14 @@
                     </div>
                 </div>
             </div>
-            <div class="grid-3 ">
-                <div class="card ">
-                    <div class="card-img ">
-                        <div class="inner ">
-                            <img src="../assets/img/it-infrastructure/it-infrastructure3.jpg " alt=" " class="card-img-top fluid ">
+            <div class="grid-3">
+                <div class="card">
+                    <div class="card-img">
+                        <div class="inner">
+                            <img src="../assets/img/it-infrastructure/it-infrastructure3.jpg " alt=" " class="card-img-top fluid">
                         </div>
                     </div>
-                    <div class="card-body ">
+                    <div class="card-body">
                         <h2>it infrastructure</h2>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
@@ -136,32 +136,76 @@
                         <a href=" " class="btn btn-primary mb-1 ">Read More</a>
                     </div>
                 </div>
-                <div class="card ">
-                    <div class="card-img ">
-                        <div class="inner ">
-                            <img src="../assets/img/it-infrastructure/it-infrastructure3.jpg" alt=" " class="card-img-top fluid ">
+                <div class="card">
+                    <div class="card-img">
+                        <div class="inner">
+                            <img src="../assets/img/it-infrastructure/it-infrastructure3.jpg" alt=" " class="card-img-top fluid">
                         </div>
                     </div>
-                    <div class="card-body ">
+                    <div class="card-body">
                         <h2>it infrastructure</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
+                        </p>
+                        <a href=" " class="btn btn-primary mb-1">Read More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <div class="inner">
+                            <img src="../assets/img/it-infrastructure/it-infrastructure3.jpg" alt=" " class="card-img-top fluid">
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h2>it infrastructure</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
+                        </p>
+                        <a href=" " class="btn btn-primary mb-1">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-3">
+                <div class="card">
+                    <div class="card-img">
+                        <div class="inner">
+                            <img src="../assets/img/structured-cabling/structured-cabling4.jpg " alt=" " class="card-img-top fluid">
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h2>Structured cabling</h2>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
                         </p>
                         <a href=" " class="btn btn-primary mb-1 ">Read More</a>
                     </div>
                 </div>
-                <div class="card ">
-                    <div class="card-img ">
-                        <div class="inner ">
-                            <img src="../assets/img/it-infrastructure/it-infrastructure3.jpg" alt=" " class="card-img-top fluid ">
+                <div class="card">
+                    <div class="card-img">
+                        <div class="inner">
+                            <img src="../assets/img/structured-cabling/structured-cabling4.jpg" alt=" " class="card-img-top fluid">
                         </div>
                     </div>
-                    <div class="card-body ">
-                        <h2>it infrastructure</h2>
+                    <div class="card-body">
+                        <h2>Structured cabling</h2>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
                         </p>
-                        <a href=" " class="btn btn-primary mb-1 ">Read More</a>
+                        <a href=" " class="btn btn-primary mb-1">Read More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <div class="inner">
+                            <img src="../assets/img/structured-cabling/structured-cabling4.jpg" alt=" " class="card-img-top fluid">
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h2>Structured cabling</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
+                        </p>
+                        <a href=" " class="btn btn-primary mb-1">Read More</a>
                     </div>
                 </div>
             </div>
@@ -234,7 +278,7 @@
 
     <!-- ====== Scripts ====== -->
     <!-- JQuery CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js " integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin=" anonymous "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js " integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin=" anonymous"></script>
     <!-- jQuery Offline -->
     <script src="../assets/vendors/jquery/jquery.min.js "></script>
     <!-- Main JS -->
