--- a/fastnet/pages/about.html
+++ b/fastnet/pages/about.html
@@ -141,7 +141,7 @@
                 <div class="card">
                     <div class="card-content">
                         <div class="card-image">
-                            <img src="../assets/img/avatar/avatar1.png" alt="" srcset="">
+                            <img src="../assets/img/about/about1.jpg" alt="" srcset="">
                         </div>
                         <div class="social">
                             <a href="http://" target="_blank" rel="noopener noreferrer">
@@ -163,7 +163,7 @@
                 <div class="card">
                     <div class="card-content">
                         <div class="card-image">
-                            <img src="../assets/img/avatar/avatar2.png" alt="" srcset="">
+                            <img src="../assets/img/about/about.jpg" alt="" srcset="">
                         </div>
                         <div class="social">
                             <a href="http://" target="_blank" rel="noopener noreferrer">
@@ -185,7 +185,7 @@
                 <div class="card">
                     <div class="card-content">
                         <div class="card-image">
-                            <img src="../assets/img/avatar/avatar.png" alt="" srcset="">
+                            <img src="../assets/img/about/about1.jpg" alt="" srcset="">
                         </div>
                         <div class="social">
                             <a href="http://" target="_blank" rel="noopener noreferrer">
