Changes on testimonial section

--- a/fastnet/index.html
+++ b/fastnet/index.html
@@ -26,7 +26,7 @@
 
     <!-- === Navigation === -->
     <nav class="navbar">
-        <a href="#home" class="nav-brand">
+        <a href="#" class="nav-brand">
             <img src="assets/img/brand/logo.png" alt="fastnet-logo">
         </a>
         <label for="check" id="check-btn">
