Projects page contents moved to services page and vice versa

--- a/fastnet/pages/services.html
+++ b/fastnet/pages/services.html
@@ -44,7 +44,7 @@
                 <a href="#home" class="nav-link active">Services</a>
             </li>
             <li class="nav-item">
-                <a href="projects.html" class="nav-link">Projects</a>
+                <a href="services.html" class="nav-link">services</a>
             </li>
             <li class="nav-item">
                 <a href="contact.html" class="nav-link">Contact</a>
@@ -73,142 +73,72 @@
         </div>
     </section>
 
+    <!-- === Services === -->
+    <section id="services">
+        <div class="service-text">
+            <h2>CCTV Installation</h2>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, sit ipsum libero nihil, beatae atque eligendi exercitationem vitae corporis quam eum rem facilis quisquam dicta nostrum repellat est, perspiciatis unde? Lorem, ipsum dolor sit amet consectetur
+                adipisicing elit. Nesciunt, sit ipsum libero nihil, beatae atque eligendi exercitationem vitae corporis quam eum rem facilis quisquam dicta nostrum repellat est, perspiciatis unde?
+            </p>
+        </div>
+        <div class="service-img">
+            <img src="../assets/img/camera/camera-installation.jpg" alt="">
+        </div>
+    </section>
+
+    <!-- === services-2 === -->
+    <section id="services-2">
+        <div class="service-img">
+            <img src="../assets/img/it-infrastructure/it-infrastructure1.jpg" alt="">
+        </div>
+        <div class="service-text">
+            <h2>It infrastructure</h2>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, sit ipsum libero nihil, beatae atque eligendi exercitationem vitae corporis quam eum rem facilis quisquam dicta nostrum repellat est, perspiciatis unde? Lorem, ipsum dolor sit amet consectetur
+                adipisicing elit. Nesciunt, sit ipsum libero nihil, beatae atque eligendi exercitationem vitae corporis quam eum rem facilis quisquam dicta nostrum repellat est, perspiciatis unde?
+            </p>
+        </div>
+    </section>
 
     <!-- === services === -->
     <section id="services">
-        <div class="container">
-            <div class="grid-3">
-                <div class="card">
-                    <div class="card-img">
-                        <div class="inner">
-                            <img src="../assets/img/camera/camera16.jpg" alt="" class="card-img-top fluid">
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <h2>Cctv system</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
-                        </p>
-                        <a href=" " class="btn btn-primary mb-1 ">Read More</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-img">
-                        <div class="inner">
-                            <img src="../assets/img/camera/camera14.jpg" alt="" class="card-img-top fluid">
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <h2>Cctv system</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
-                        </p>
-                        <a href=" " class="btn btn-primary mb-1 ">Read More</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-img">
-                        <div class="inner">
-                            <img src="../assets/img/camera/camera13.jpg" alt="" class="card-img-top fluid">
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <h2>Cctv system</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
-                        </p>
-                        <a href=" " class="btn btn-primary mb-1 ">Read More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="grid-3">
-                <div class="card">
-                    <div class="card-img">
-                        <div class="inner">
-                            <img src="../assets/img/it-infrastructure/it-infrastructure3.jpg " alt=" " class="card-img-top fluid">
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <h2>it infrastructure</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
-                        </p>
-                        <a href=" " class="btn btn-primary mb-1 ">Read More</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-img">
-                        <div class="inner">
-                            <img src="../assets/img/it-infrastructure/it-infrastructure3.jpg" alt=" " class="card-img-top fluid">
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <h2>it infrastructure</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
-                        </p>
-                        <a href=" " class="btn btn-primary mb-1">Read More</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-img">
-                        <div class="inner">
-                            <img src="../assets/img/it-infrastructure/it-infrastructure3.jpg" alt=" " class="card-img-top fluid">
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <h2>it infrastructure</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
-                        </p>
-                        <a href=" " class="btn btn-primary mb-1">Read More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="grid-3">
-                <div class="card">
-                    <div class="card-img">
-                        <div class="inner">
-                            <img src="../assets/img/structured-cabling/structured-cabling4.jpg " alt=" " class="card-img-top fluid">
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <h2>Structured cabling</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
-                        </p>
-                        <a href=" " class="btn btn-primary mb-1 ">Read More</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-img">
-                        <div class="inner">
-                            <img src="../assets/img/structured-cabling/structured-cabling4.jpg" alt=" " class="card-img-top fluid">
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <h2>Structured cabling</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
-                        </p>
-                        <a href=" " class="btn btn-primary mb-1">Read More</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-img">
-                        <div class="inner">
-                            <img src="../assets/img/structured-cabling/structured-cabling4.jpg" alt=" " class="card-img-top fluid">
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <h2>Structured cabling</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
-                        </p>
-                        <a href=" " class="btn btn-primary mb-1">Read More</a>
-                    </div>
-                </div>
-            </div>
+        <div class="service-text">
+            <h2>Structured cabling</h2>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, sit ipsum libero nihil, beatae atque eligendi exercitationem vitae corporis quam eum rem facilis quisquam dicta nostrum repellat est, perspiciatis unde? Lorem, ipsum dolor sit amet consectetur
+                adipisicing elit. Nesciunt, sit ipsum libero nihil, beatae atque eligendi exercitationem vitae corporis quam eum rem facilis quisquam dicta nostrum repellat est, perspiciatis unde?
+            </p>
+        </div>
+        <div class="service-img">
+            <img src="../assets/img/structured-cabling/structured-cabling4.jpg" alt="">
+        </div>
+    </section>
+
+    <!-- === Services-2 === -->
+    <section id="services-2">
+        <div class="service-img">
+            <img src="../assets/img/car-tracking/car-tracking1.jpg" alt="">
+        </div>
+        <div class="service-text">
+            <h2>Car tracking</h2>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, sit ipsum libero nihil, beatae atque eligendi exercitationem vitae corporis quam eum rem facilis quisquam dicta nostrum repellat est, perspiciatis unde? Lorem, ipsum dolor sit amet consectetur
+                adipisicing elit. Nesciunt, sit ipsum libero nihil, beatae atque eligendi exercitationem vitae corporis quam eum rem facilis quisquam dicta nostrum repellat est, perspiciatis unde?
+            </p>
+        </div>
+    </section>
+    <!-- === Services-2 === -->
+    <section id="services">
+        <div class="service-text">
+            <h2>Video Intercom</h2>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, sit ipsum libero nihil, beatae atque eligendi exercitationem vitae corporis quam eum rem facilis quisquam dicta nostrum repellat est, perspiciatis unde? Lorem, ipsum dolor sit amet consectetur
+                adipisicing elit. Nesciunt, sit ipsum libero nihil, beatae atque eligendi exercitationem vitae corporis quam eum rem facilis quisquam dicta nostrum repellat est, perspiciatis unde?
+            </p>
+        </div>
+        <div class="service-img">
+            <img src="../assets/img/video-intercom/video-intercom2.jpg" alt="">
         </div>
     </section>
 
@@ -236,7 +166,7 @@
                         <a href="../index.html">Home</a>
                         <a href="about.html">About</a>
                         <a href="#home">Services</a>
-                        <a href="projects.html">Projects</a>
+                        <a href="services.html">services</a>
                         <a href="contact.html">Contact</a>
                     </nav>
                 </div>
