--- a/fastnet/pages/projects.html
+++ b/fastnet/pages/projects.html
@@ -73,44 +73,132 @@
         </div>
     </section>
 
-
     <!-- === Projects === -->
     <section id="projects">
-        <div class="project-text">
-            <h2>CCTV Installation</h2>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, sit ipsum libero nihil, beatae atque eligendi exercitationem vitae corporis quam eum rem facilis quisquam dicta nostrum repellat est, perspiciatis unde? Lorem, ipsum dolor sit amet consectetur
-                adipisicing elit. Nesciunt, sit ipsum libero nihil, beatae atque eligendi exercitationem vitae corporis quam eum rem facilis quisquam dicta nostrum repellat est, perspiciatis unde?
-            </p>
-        </div>
-        <div class="project-img">
-            <img src="../assets/img/camera/camera-installation.jpg" alt="">
-        </div>
-    </section>
-
-    <section id="projects">
-        <div class="project-img">
-            <img src="../assets/img/it-infrastructure/installation1.jpg" alt="">
-        </div>
-        <div class="project-text">
-            <h2>It infrastructure</h2>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, sit ipsum libero nihil, beatae atque eligendi exercitationem vitae corporis quam eum rem facilis quisquam dicta nostrum repellat est, perspiciatis unde? Lorem, ipsum dolor sit amet consectetur
-                adipisicing elit. Nesciunt, sit ipsum libero nihil, beatae atque eligendi exercitationem vitae corporis quam eum rem facilis quisquam dicta nostrum repellat est, perspiciatis unde?
-            </p>
-        </div>
-    </section>
-
-    <section id="projects">
-        <div class="project-text">
-            <h2>Structured cabling</h2>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, sit ipsum libero nihil, beatae atque eligendi exercitationem vitae corporis quam eum rem facilis quisquam dicta nostrum repellat est, perspiciatis unde? Lorem, ipsum dolor sit amet consectetur
-                adipisicing elit. Nesciunt, sit ipsum libero nihil, beatae atque eligendi exercitationem vitae corporis quam eum rem facilis quisquam dicta nostrum repellat est, perspiciatis unde?
-            </p>
-        </div>
-        <div class="project-img">
-            <img src="../assets/img/structured-cabling/structured-cabling4.jpg" alt="">
+        <div class="container">
+            <div class="grid-3">
+                <div class="card">
+                    <div class="card-img">
+                        <div class="inner">
+                            <img src="../assets/img/camera/camera16.jpg" alt="" class="card-img-top fluid">
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h2>Cctv system</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <div class="inner">
+                            <img src="../assets/img/camera/camera14.jpg" alt="" class="card-img-top fluid">
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h2>Cctv system</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <div class="inner">
+                            <img src="../assets/img/camera/camera13.jpg" alt="" class="card-img-top fluid">
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h2>Cctv system</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-3">
+                <div class="card">
+                    <div class="card-img">
+                        <div class="inner">
+                            <img src="../assets/img/it-infrastructure/it-infrastructure3.jpg " alt=" " class="card-img-top fluid">
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h2>it infrastructure</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <div class="inner">
+                            <img src="../assets/img/it-infrastructure/it-infrastructure3.jpg" alt=" " class="card-img-top fluid">
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h2>it infrastructure</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <div class="inner">
+                            <img src="../assets/img/it-infrastructure/it-infrastructure3.jpg" alt=" " class="card-img-top fluid">
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h2>it infrastructure</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-3">
+                <div class="card">
+                    <div class="card-img">
+                        <div class="inner">
+                            <img src="../assets/img/structured-cabling/structured-cabling4.jpg " alt=" " class="card-img-top fluid">
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h2>Structured cabling</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <div class="inner">
+                            <img src="../assets/img/structured-cabling/structured-cabling4.jpg" alt=" " class="card-img-top fluid">
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h2>Structured cabling</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <div class="inner">
+                            <img src="../assets/img/structured-cabling/structured-cabling4.jpg" alt=" " class="card-img-top fluid">
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h2>Structured cabling</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
