--- a/fastnet/index.html
+++ b/fastnet/index.html
@@ -340,7 +340,7 @@
                     </nav>
                 </div>
                 <div class="col">
-                    <h3>Reach Us</h3>
+                    <h3>Contact Us</h3>
                     <div class="contact-address">
                         <div class="location">
                             <i class="fas fa-map-marker-alt"></i>
