--- a/fastnet/pages/services.html
+++ b/fastnet/pages/services.html
@@ -44,7 +44,7 @@
                 <a href="#home" class="nav-link active">Services</a>
             </li>
             <li class="nav-item">
-                <a href="services.html" class="nav-link">services</a>
+                <a href="services.html" class="nav-link">Projects</a>
             </li>
             <li class="nav-item">
                 <a href="contact.html" class="nav-link">Contact</a>
@@ -166,12 +166,12 @@
                         <a href="../index.html">Home</a>
                         <a href="about.html">About</a>
                         <a href="#home">Services</a>
-                        <a href="services.html">services</a>
+                        <a href="services.html">Projects</a>
                         <a href="contact.html">Contact</a>
                     </nav>
                 </div>
                 <div class="col">
-                    <h3>Reach Us</h3>
+                    <h3>Contact Us</h3>
                     <div class="contact-address">
                         <div class="location">
                             <i class="fas fa-map-marker-alt"></i>
